--- a/CenaPlus.Server/CenaPlus.Server.csproj
+++ b/CenaPlus.Server/CenaPlus.Server.csproj
@@ -53,9 +53,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -167,10 +167,17 @@
     <Compile Include="Settings\About.xaml.cs">
       <DependentUpon>About.xaml</DependentUpon>
     </Compile>
+    <Page Include="Settings\Judge.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Settings\SettingsAppearance.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Compile Include="Settings\Judge.xaml.cs">
+      <DependentUpon>Judge.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Settings\SettingsAppearance.xaml.cs">
       <DependentUpon>SettingsAppearance.xaml</DependentUpon>
     </Compile>
@@ -215,7 +222,35 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <COMReference Include="MSHTML">
+      <Guid>{3050F1C5-98B5-11CF-BB82-00AA00BDCE0B}</Guid>
+      <VersionMajor>4</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="Resources\CenaPlus.ico" />
+    <Resource Include="Resources\charactergrowfont.png" />
+    <Resource Include="Resources\charactershrinkfont.png" />
+    <Resource Include="Resources\editcopy.png" />
+    <Resource Include="Resources\editcut.png" />
+    <Resource Include="Resources\editpaste.png" />
+    <Resource Include="Resources\editredo.png" />
+    <Resource Include="Resources\editundo.png" />
+    <Resource Include="Resources\fileopen.png" />
+    <Resource Include="Resources\filesave.png" />
+    <Resource Include="Resources\listbullets.png" />
+    <Resource Include="Resources\listnumbering.png" />
+    <Resource Include="Resources\paragraphcenterjustify.png" />
+    <Resource Include="Resources\paragraphdecreaseindentation.png" />
+    <Resource Include="Resources\paragraphfulljustify.png" />
+    <Resource Include="Resources\paragraphincreaseindentation.png" />
+    <Resource Include="Resources\paragraphleftjustify.png" />
+    <Resource Include="Resources\paragraphrightjustify.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
